// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/songs/ScoreBoard.vue > { locale: "en" } snapshot test > { pending: true } renders loading state 1`] = `
<div
  class="o-clps card"
  data-v-a8d65a31=""
>
  <div
    class="o-clps__trigger"
  >
    <header
      aria-controls="SP-BEGINNER (4)"
      class="card-header is-beginner"
      data-v-a8d65a31=""
      role="button"
    >
      <div
        class="card-header-title"
        data-v-a8d65a31=""
      >
        SP-BEGINNER (4)
      </div>
      <a
        class="card-header-icon"
        data-v-a8d65a31=""
      >
        <span
          class="icon"
          data-v-a8d65a31=""
        >
          <i
            class="mdi mdi-menu-down mdi-24px"
          />
        </span>
      </a>
    </header>
  </div>
  <transition-stub
    appear="false"
    css="true"
    name="slide"
    persisted="false"
  >
    <div
      class="o-clps__content"
      id="SP-BEGINNER (4)"
      style="display: none;"
    >
      
      <div
        class="card-content"
      >
        <div
          class="table-container"
        >
          <div
            class="b-table"
          >
            <div
              style="display: none;"
            >
              
              <span
                data-id="1"
              >
                Name
              </span>
              <span
                centered=""
                data-id="2"
              >
                Score
              </span>
              <span
                data-id="3"
              >
                EX
              </span>
              
            </div>
            <!--v-if-->
            <!--v-if-->
            <div
              class="table-wrapper"
            >
              <table
                class="table is-empty"
              >
                <!--v-if-->
                <thead>
                  
                  
                  <tr>
                    <!--v-if-->
                    <!--v-if-->
                    
                    <th
                      class=""
                      draggable="false"
                    >
                      <span>
                        Name 
                        <span
                          class="th-wrap sort-icon"
                          style="display: none;"
                        >
                          <span
                            class="icon is-small"
                          >
                            <i
                              class="mdi mdi-arrow-up"
                            />
                          </span>
                        </span>
                      </span>
                    </th>
                    <th
                      class=""
                      draggable="false"
                    >
                      <span>
                        Score 
                        <span
                          class="th-wrap sort-icon"
                          style="display: none;"
                        >
                          <span
                            class="icon is-small"
                          >
                            <i
                              class="mdi mdi-arrow-up"
                            />
                          </span>
                        </span>
                      </span>
                    </th>
                    <th
                      class=""
                      draggable="false"
                    >
                      <span>
                        EX 
                        <span
                          class="th-wrap sort-icon"
                          style="display: none;"
                        >
                          <span
                            class="icon is-small"
                          >
                            <i
                              class="mdi mdi-arrow-up"
                            />
                          </span>
                        </span>
                      </span>
                    </th>
                    
                    <!--v-if-->
                  </tr>
                  <!--v-if-->
                  <!--v-if-->
                </thead>
                <tbody>
                  
                  
                  <tr>
                    <td
                      colspan="3"
                    >
                      
                      <section
                        class="section"
                      >
                        <div
                          class="content has-text-grey has-text-centered"
                        >
                          <p>
                            No Data
                          </p>
                        </div>
                      </section>
                      
                    </td>
                  </tr>
                </tbody>
                <!--v-if-->
              </table>
              
              <transition-stub
                appear="false"
                css="true"
                name="fade"
                persisted="false"
              >
                <div
                  class="o-load loading"
                >
                  <div
                    class="o-load__overlay loading-overlay"
                  />
                  
                  <span
                    class="icon is-spin is-medium o-load__icon icon"
                  >
                    <i
                      class="mdi mdi-loading mdi-36px"
                    />
                  </span>
                  
                </div>
              </transition-stub>
              
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      <footer
        class="card-footer"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="card-footer-item"
        >
          Show All
        </a>
      </footer>
      
    </div>
  </transition-stub>
</div>
`;

exports[`components/songs/ScoreBoard.vue > { locale: "en" } snapshot test > { scores: [...] } renders score board 1`] = `
<div
  class="o-clps card"
  data-v-a8d65a31=""
>
  <div
    class="o-clps__trigger"
  >
    <header
      aria-controls="SP-BEGINNER (4)"
      class="card-header is-beginner"
      data-v-a8d65a31=""
      role="button"
    >
      <div
        class="card-header-title"
        data-v-a8d65a31=""
      >
        SP-BEGINNER (4)
      </div>
      <a
        class="card-header-icon"
        data-v-a8d65a31=""
      >
        <span
          class="icon"
          data-v-a8d65a31=""
        >
          <i
            class="mdi mdi-menu-down mdi-24px"
          />
        </span>
      </a>
    </header>
  </div>
  <transition-stub
    appear="false"
    css="true"
    name="slide"
    persisted="false"
  >
    <div
      class="o-clps__content"
      id="SP-BEGINNER (4)"
      style="display: none;"
    >
      
      <div
        class="card-content"
      >
        <div
          class="table-container"
        >
          <div
            class="b-table"
          >
            <div
              style="display: none;"
            >
              
              <span
                data-id="1"
              >
                Name
              </span>
              <span
                centered=""
                data-id="2"
              >
                Score
              </span>
              <span
                data-id="3"
              >
                EX
              </span>
              
            </div>
            <!--v-if-->
            <!--v-if-->
            <div
              class="table-wrapper"
            >
              <table
                class="table"
              >
                <!--v-if-->
                <thead>
                  
                  
                  <tr>
                    <!--v-if-->
                    <!--v-if-->
                    
                    <th
                      class=""
                      draggable="false"
                    >
                      <span>
                        Name 
                        <span
                          class="th-wrap sort-icon"
                          style="display: none;"
                        >
                          <span
                            class="icon is-small"
                          >
                            <i
                              class="mdi mdi-arrow-up"
                            />
                          </span>
                        </span>
                      </span>
                    </th>
                    <th
                      class=""
                      draggable="false"
                    >
                      <span>
                        Score 
                        <span
                          class="th-wrap sort-icon"
                          style="display: none;"
                        >
                          <span
                            class="icon is-small"
                          >
                            <i
                              class="mdi mdi-arrow-up"
                            />
                          </span>
                        </span>
                      </span>
                    </th>
                    <th
                      class=""
                      draggable="false"
                    >
                      <span>
                        EX 
                        <span
                          class="th-wrap sort-icon"
                          style="display: none;"
                        >
                          <span
                            class="icon is-small"
                          >
                            <i
                              class="mdi mdi-arrow-up"
                            />
                          </span>
                        </span>
                      </span>
                    </th>
                    
                    <!--v-if-->
                  </tr>
                  <!--v-if-->
                  <!--v-if-->
                </thead>
                <tbody>
                  
                  
                  <tr
                    class=""
                    draggable="false"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    
                    <td
                      class=""
                      data-label="Name"
                    >
                      <span
                        class="is-size-7"
                      >
                        World
                      </span>
                    </td>
                    <td
                      class=""
                      data-label="Score"
                    >
                      <div
                        class="b-tooltip is-primary is-top"
                      >
                        <transition-stub
                          appear="false"
                          css="true"
                          name="fade"
                          persisted="true"
                        >
                          <div
                            class="tooltip-content is-top"
                            style="display: none;"
                          >
                            <span
                              class=""
                            />
                            
                            Perfect Full Combo
                            
                          </div>
                        </transition-stub>
                        <div
                          class="tooltip-trigger"
                        >
                          
                          <span
                            class="tag is-basic"
                          >
                            999620
                          </span>
                          
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                      data-label="EX"
                    >
                      <span
                        class="is-size-7"
                      >
                        376
                      </span>
                    </td>
                    
                    <!--v-if-->
                  </tr>
                  <transition-stub
                    appear="false"
                    css="true"
                    name=""
                    persisted="false"
                  >
                    <!--v-if-->
                  </transition-stub>
                  <!--v-if-->
                  
                  
                  <tr
                    class=""
                    draggable="false"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    
                    <td
                      class=""
                      data-label="Name"
                    >
                      <span
                        class="is-size-7"
                      >
                        Tokyo
                      </span>
                    </td>
                    <td
                      class=""
                      data-label="Score"
                    >
                      <div
                        class="b-tooltip is-primary is-top"
                      >
                        <transition-stub
                          appear="false"
                          css="true"
                          name="fade"
                          persisted="true"
                        >
                          <div
                            class="tooltip-content is-top"
                            style="display: none;"
                          >
                            <span
                              class=""
                            />
                            
                            Great Full Combo
                            
                          </div>
                        </transition-stub>
                        <div
                          class="tooltip-trigger"
                        >
                          
                          <span
                            class="tag is-expert"
                          >
                            996720
                          </span>
                          
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                      data-label="EX"
                    >
                      <span
                        class="is-size-7"
                      >
                        375
                      </span>
                    </td>
                    
                    <!--v-if-->
                  </tr>
                  <transition-stub
                    appear="false"
                    css="true"
                    name=""
                    persisted="false"
                  >
                    <!--v-if-->
                  </transition-stub>
                  <!--v-if-->
                  
                  
                  <tr
                    class=""
                    draggable="false"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    
                    <td
                      class=""
                      data-label="Name"
                    >
                      <a
                        class="is-size-7"
                      >
                        Public User
                      </a>
                    </td>
                    <td
                      class=""
                      data-label="Score"
                    >
                      <div
                        class="b-tooltip is-primary is-top"
                      >
                        <transition-stub
                          appear="false"
                          css="true"
                          name="fade"
                          persisted="true"
                        >
                          <div
                            class="tooltip-content is-top"
                            style="display: none;"
                          >
                            <span
                              class=""
                            />
                            
                            Great Full Combo
                            
                          </div>
                        </transition-stub>
                        <div
                          class="tooltip-trigger"
                        >
                          
                          <span
                            class="tag is-expert"
                          >
                            970630
                          </span>
                          
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                      data-label="EX"
                    >
                      <span
                        class="is-size-7"
                      >
                        366
                      </span>
                    </td>
                    
                    <!--v-if-->
                  </tr>
                  <transition-stub
                    appear="false"
                    css="true"
                    name=""
                    persisted="false"
                  >
                    <!--v-if-->
                  </transition-stub>
                  <!--v-if-->
                  
                  
                  <tr
                    class=""
                    draggable="false"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    
                    <td
                      class=""
                      data-label="Name"
                    >
                      <a
                        class="is-size-7"
                      >
                        Area Hidden User
                      </a>
                    </td>
                    <td
                      class=""
                      data-label="Score"
                    >
                      <div
                        class="b-tooltip is-primary is-top"
                      >
                        <transition-stub
                          appear="false"
                          css="true"
                          name="fade"
                          persisted="true"
                        >
                          <div
                            class="tooltip-content is-top"
                            style="display: none;"
                          >
                            <span
                              class=""
                            />
                            
                            Great Full Combo
                            
                          </div>
                        </transition-stub>
                        <div
                          class="tooltip-trigger"
                        >
                          
                          <span
                            class="tag is-expert"
                          >
                            970630
                          </span>
                          
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                      data-label="EX"
                    >
                      <span
                        class="is-size-7"
                      >
                        366
                      </span>
                    </td>
                    
                    <!--v-if-->
                  </tr>
                  <transition-stub
                    appear="false"
                    css="true"
                    name=""
                    persisted="false"
                  >
                    <!--v-if-->
                  </transition-stub>
                  <!--v-if-->
                  
                  
                  <tr
                    class="is-selected"
                    draggable="false"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    
                    <td
                      class=""
                      data-label="Name"
                    >
                      <a
                        class="is-size-7"
                      >
                        Private User
                      </a>
                    </td>
                    <td
                      class=""
                      data-label="Score"
                    >
                      <div
                        class="b-tooltip is-primary is-top"
                      >
                        <transition-stub
                          appear="false"
                          css="true"
                          name="fade"
                          persisted="true"
                        >
                          <div
                            class="tooltip-content is-top"
                            style="display: none;"
                          >
                            <span
                              class=""
                            />
                            
                            Great Full Combo
                            
                          </div>
                        </transition-stub>
                        <div
                          class="tooltip-trigger"
                        >
                          
                          <span
                            class="tag is-expert"
                          >
                            970630
                          </span>
                          
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                      data-label="EX"
                    >
                      <span
                        class="is-size-7"
                      >
                        366
                      </span>
                    </td>
                    
                    <!--v-if-->
                  </tr>
                  <transition-stub
                    appear="false"
                    css="true"
                    name=""
                    persisted="false"
                  >
                    <!--v-if-->
                  </transition-stub>
                  <!--v-if-->
                  
                  
                  <!--v-if-->
                </tbody>
                <!--v-if-->
              </table>
              
              <transition-stub
                appear="false"
                css="true"
                name="fade"
                persisted="false"
              >
                <!--v-if-->
              </transition-stub>
              
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      <footer
        class="card-footer"
      >
        <a
          class="card-footer-item"
        >
          Edit
        </a>
        <a
          class="card-footer-item"
        >
          Import
        </a>
        <a
          class="card-footer-item"
        >
          Show All
        </a>
      </footer>
      
    </div>
  </transition-stub>
</div>
`;

exports[`components/songs/ScoreBoard.vue > { locale: "ja" } snapshot test > { pending: true } renders loading state 1`] = `
<div
  class="o-clps card"
  data-v-a8d65a31=""
>
  <div
    class="o-clps__trigger"
  >
    <header
      aria-controls="SP-BEGINNER (4)"
      class="card-header is-beginner"
      data-v-a8d65a31=""
      role="button"
    >
      <div
        class="card-header-title"
        data-v-a8d65a31=""
      >
        SP-BEGINNER (4)
      </div>
      <a
        class="card-header-icon"
        data-v-a8d65a31=""
      >
        <span
          class="icon"
          data-v-a8d65a31=""
        >
          <i
            class="mdi mdi-menu-down mdi-24px"
          />
        </span>
      </a>
    </header>
  </div>
  <transition-stub
    appear="false"
    css="true"
    name="slide"
    persisted="false"
  >
    <div
      class="o-clps__content"
      id="SP-BEGINNER (4)"
      style="display: none;"
    >
      
      <div
        class="card-content"
      >
        <div
          class="table-container"
        >
          <div
            class="b-table"
          >
            <div
              style="display: none;"
            >
              
              <span
                data-id="1"
              >
                ユーザー名
              </span>
              <span
                centered=""
                data-id="2"
              >
                スコア
              </span>
              <span
                data-id="3"
              >
                EX
              </span>
              
            </div>
            <!--v-if-->
            <!--v-if-->
            <div
              class="table-wrapper"
            >
              <table
                class="table is-empty"
              >
                <!--v-if-->
                <thead>
                  
                  
                  <tr>
                    <!--v-if-->
                    <!--v-if-->
                    
                    <th
                      class=""
                      draggable="false"
                    >
                      <span>
                        ユーザー名 
                        <span
                          class="th-wrap sort-icon"
                          style="display: none;"
                        >
                          <span
                            class="icon is-small"
                          >
                            <i
                              class="mdi mdi-arrow-up"
                            />
                          </span>
                        </span>
                      </span>
                    </th>
                    <th
                      class=""
                      draggable="false"
                    >
                      <span>
                        スコア 
                        <span
                          class="th-wrap sort-icon"
                          style="display: none;"
                        >
                          <span
                            class="icon is-small"
                          >
                            <i
                              class="mdi mdi-arrow-up"
                            />
                          </span>
                        </span>
                      </span>
                    </th>
                    <th
                      class=""
                      draggable="false"
                    >
                      <span>
                        EX 
                        <span
                          class="th-wrap sort-icon"
                          style="display: none;"
                        >
                          <span
                            class="icon is-small"
                          >
                            <i
                              class="mdi mdi-arrow-up"
                            />
                          </span>
                        </span>
                      </span>
                    </th>
                    
                    <!--v-if-->
                  </tr>
                  <!--v-if-->
                  <!--v-if-->
                </thead>
                <tbody>
                  
                  
                  <tr>
                    <td
                      colspan="3"
                    >
                      
                      <section
                        class="section"
                      >
                        <div
                          class="content has-text-grey has-text-centered"
                        >
                          <p>
                            データがありません
                          </p>
                        </div>
                      </section>
                      
                    </td>
                  </tr>
                </tbody>
                <!--v-if-->
              </table>
              
              <transition-stub
                appear="false"
                css="true"
                name="fade"
                persisted="false"
              >
                <div
                  class="o-load loading"
                >
                  <div
                    class="o-load__overlay loading-overlay"
                  />
                  
                  <span
                    class="icon is-spin is-medium o-load__icon icon"
                  >
                    <i
                      class="mdi mdi-loading mdi-36px"
                    />
                  </span>
                  
                </div>
              </transition-stub>
              
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      <footer
        class="card-footer"
      >
        <!--v-if-->
        <!--v-if-->
        <a
          class="card-footer-item"
        >
          全件表示
        </a>
      </footer>
      
    </div>
  </transition-stub>
</div>
`;

exports[`components/songs/ScoreBoard.vue > { locale: "ja" } snapshot test > { scores: [...] } renders score board 1`] = `
<div
  class="o-clps card"
  data-v-a8d65a31=""
>
  <div
    class="o-clps__trigger"
  >
    <header
      aria-controls="SP-BEGINNER (4)"
      class="card-header is-beginner"
      data-v-a8d65a31=""
      role="button"
    >
      <div
        class="card-header-title"
        data-v-a8d65a31=""
      >
        SP-BEGINNER (4)
      </div>
      <a
        class="card-header-icon"
        data-v-a8d65a31=""
      >
        <span
          class="icon"
          data-v-a8d65a31=""
        >
          <i
            class="mdi mdi-menu-down mdi-24px"
          />
        </span>
      </a>
    </header>
  </div>
  <transition-stub
    appear="false"
    css="true"
    name="slide"
    persisted="false"
  >
    <div
      class="o-clps__content"
      id="SP-BEGINNER (4)"
      style="display: none;"
    >
      
      <div
        class="card-content"
      >
        <div
          class="table-container"
        >
          <div
            class="b-table"
          >
            <div
              style="display: none;"
            >
              
              <span
                data-id="1"
              >
                ユーザー名
              </span>
              <span
                centered=""
                data-id="2"
              >
                スコア
              </span>
              <span
                data-id="3"
              >
                EX
              </span>
              
            </div>
            <!--v-if-->
            <!--v-if-->
            <div
              class="table-wrapper"
            >
              <table
                class="table"
              >
                <!--v-if-->
                <thead>
                  
                  
                  <tr>
                    <!--v-if-->
                    <!--v-if-->
                    
                    <th
                      class=""
                      draggable="false"
                    >
                      <span>
                        ユーザー名 
                        <span
                          class="th-wrap sort-icon"
                          style="display: none;"
                        >
                          <span
                            class="icon is-small"
                          >
                            <i
                              class="mdi mdi-arrow-up"
                            />
                          </span>
                        </span>
                      </span>
                    </th>
                    <th
                      class=""
                      draggable="false"
                    >
                      <span>
                        スコア 
                        <span
                          class="th-wrap sort-icon"
                          style="display: none;"
                        >
                          <span
                            class="icon is-small"
                          >
                            <i
                              class="mdi mdi-arrow-up"
                            />
                          </span>
                        </span>
                      </span>
                    </th>
                    <th
                      class=""
                      draggable="false"
                    >
                      <span>
                        EX 
                        <span
                          class="th-wrap sort-icon"
                          style="display: none;"
                        >
                          <span
                            class="icon is-small"
                          >
                            <i
                              class="mdi mdi-arrow-up"
                            />
                          </span>
                        </span>
                      </span>
                    </th>
                    
                    <!--v-if-->
                  </tr>
                  <!--v-if-->
                  <!--v-if-->
                </thead>
                <tbody>
                  
                  
                  <tr
                    class=""
                    draggable="false"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    
                    <td
                      class=""
                      data-label="ユーザー名"
                    >
                      <span
                        class="is-size-7"
                      >
                        全国
                      </span>
                    </td>
                    <td
                      class=""
                      data-label="スコア"
                    >
                      <div
                        class="b-tooltip is-primary is-top"
                      >
                        <transition-stub
                          appear="false"
                          css="true"
                          name="fade"
                          persisted="true"
                        >
                          <div
                            class="tooltip-content is-top"
                            style="display: none;"
                          >
                            <span
                              class=""
                            />
                            
                            Perfect Full Combo
                            
                          </div>
                        </transition-stub>
                        <div
                          class="tooltip-trigger"
                        >
                          
                          <span
                            class="tag is-basic"
                          >
                            999620
                          </span>
                          
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                      data-label="EX"
                    >
                      <span
                        class="is-size-7"
                      >
                        376
                      </span>
                    </td>
                    
                    <!--v-if-->
                  </tr>
                  <transition-stub
                    appear="false"
                    css="true"
                    name=""
                    persisted="false"
                  >
                    <!--v-if-->
                  </transition-stub>
                  <!--v-if-->
                  
                  
                  <tr
                    class=""
                    draggable="false"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    
                    <td
                      class=""
                      data-label="ユーザー名"
                    >
                      <span
                        class="is-size-7"
                      >
                        東京都
                      </span>
                    </td>
                    <td
                      class=""
                      data-label="スコア"
                    >
                      <div
                        class="b-tooltip is-primary is-top"
                      >
                        <transition-stub
                          appear="false"
                          css="true"
                          name="fade"
                          persisted="true"
                        >
                          <div
                            class="tooltip-content is-top"
                            style="display: none;"
                          >
                            <span
                              class=""
                            />
                            
                            Great Full Combo
                            
                          </div>
                        </transition-stub>
                        <div
                          class="tooltip-trigger"
                        >
                          
                          <span
                            class="tag is-expert"
                          >
                            996720
                          </span>
                          
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                      data-label="EX"
                    >
                      <span
                        class="is-size-7"
                      >
                        375
                      </span>
                    </td>
                    
                    <!--v-if-->
                  </tr>
                  <transition-stub
                    appear="false"
                    css="true"
                    name=""
                    persisted="false"
                  >
                    <!--v-if-->
                  </transition-stub>
                  <!--v-if-->
                  
                  
                  <tr
                    class=""
                    draggable="false"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    
                    <td
                      class=""
                      data-label="ユーザー名"
                    >
                      <a
                        class="is-size-7"
                      >
                        Public User
                      </a>
                    </td>
                    <td
                      class=""
                      data-label="スコア"
                    >
                      <div
                        class="b-tooltip is-primary is-top"
                      >
                        <transition-stub
                          appear="false"
                          css="true"
                          name="fade"
                          persisted="true"
                        >
                          <div
                            class="tooltip-content is-top"
                            style="display: none;"
                          >
                            <span
                              class=""
                            />
                            
                            Great Full Combo
                            
                          </div>
                        </transition-stub>
                        <div
                          class="tooltip-trigger"
                        >
                          
                          <span
                            class="tag is-expert"
                          >
                            970630
                          </span>
                          
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                      data-label="EX"
                    >
                      <span
                        class="is-size-7"
                      >
                        366
                      </span>
                    </td>
                    
                    <!--v-if-->
                  </tr>
                  <transition-stub
                    appear="false"
                    css="true"
                    name=""
                    persisted="false"
                  >
                    <!--v-if-->
                  </transition-stub>
                  <!--v-if-->
                  
                  
                  <tr
                    class=""
                    draggable="false"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    
                    <td
                      class=""
                      data-label="ユーザー名"
                    >
                      <a
                        class="is-size-7"
                      >
                        Area Hidden User
                      </a>
                    </td>
                    <td
                      class=""
                      data-label="スコア"
                    >
                      <div
                        class="b-tooltip is-primary is-top"
                      >
                        <transition-stub
                          appear="false"
                          css="true"
                          name="fade"
                          persisted="true"
                        >
                          <div
                            class="tooltip-content is-top"
                            style="display: none;"
                          >
                            <span
                              class=""
                            />
                            
                            Great Full Combo
                            
                          </div>
                        </transition-stub>
                        <div
                          class="tooltip-trigger"
                        >
                          
                          <span
                            class="tag is-expert"
                          >
                            970630
                          </span>
                          
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                      data-label="EX"
                    >
                      <span
                        class="is-size-7"
                      >
                        366
                      </span>
                    </td>
                    
                    <!--v-if-->
                  </tr>
                  <transition-stub
                    appear="false"
                    css="true"
                    name=""
                    persisted="false"
                  >
                    <!--v-if-->
                  </transition-stub>
                  <!--v-if-->
                  
                  
                  <tr
                    class="is-selected"
                    draggable="false"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    
                    <td
                      class=""
                      data-label="ユーザー名"
                    >
                      <a
                        class="is-size-7"
                      >
                        Private User
                      </a>
                    </td>
                    <td
                      class=""
                      data-label="スコア"
                    >
                      <div
                        class="b-tooltip is-primary is-top"
                      >
                        <transition-stub
                          appear="false"
                          css="true"
                          name="fade"
                          persisted="true"
                        >
                          <div
                            class="tooltip-content is-top"
                            style="display: none;"
                          >
                            <span
                              class=""
                            />
                            
                            Great Full Combo
                            
                          </div>
                        </transition-stub>
                        <div
                          class="tooltip-trigger"
                        >
                          
                          <span
                            class="tag is-expert"
                          >
                            970630
                          </span>
                          
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                      data-label="EX"
                    >
                      <span
                        class="is-size-7"
                      >
                        366
                      </span>
                    </td>
                    
                    <!--v-if-->
                  </tr>
                  <transition-stub
                    appear="false"
                    css="true"
                    name=""
                    persisted="false"
                  >
                    <!--v-if-->
                  </transition-stub>
                  <!--v-if-->
                  
                  
                  <!--v-if-->
                </tbody>
                <!--v-if-->
              </table>
              
              <transition-stub
                appear="false"
                css="true"
                name="fade"
                persisted="false"
              >
                <!--v-if-->
              </transition-stub>
              
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      <footer
        class="card-footer"
      >
        <a
          class="card-footer-item"
        >
          編集
        </a>
        <a
          class="card-footer-item"
        >
          インポート
        </a>
        <a
          class="card-footer-item"
        >
          全件表示
        </a>
      </footer>
      
    </div>
  </transition-stub>
</div>
`;
